# DrahtBot

./: LICENSE  README.md  bips_mediawiki.sh  class="MuiBox-root-thawing  close.sh  close_ref.sh  conflict_comments.sh  conflicts.py  conflicts.sh  coverage.sh  coverage_fuzz.sh  depends_cache.sh  fuzz_gen.sh  gitian-build.py  gitian.py  gitian.sh  guix.sh  host_reports.sh  label_rebase.sh  label_topics.sh  labels.py  labels.sh  lock_archive.sh  req_review.sh  rerun_ci.sh  stale.sh  travis_re.py  travis_re.sh
.github/workflows/: ci.yml
check_translations/: Cargo.toml
check_translations/src/: main.rs
conflicts/: Cargo.toml  config.yml
conflicts/src/: main.rs
coverage/: Cargo.toml
coverage/src/: main.rs
coverage_fuzz/: Cargo.toml
coverage_fuzz/src/: main.rs
depends_cache/: Cargo.toml
depends_cache/src/: main.rs
doc/release-notes/: release-notes-a
fuzz_gen/: Cargo.toml
fuzz_gen/src/: main.rs
guix/: Cargo.toml
guix/src/: main.rs
host_reports/: Cargo.toml
host_reports/src/: main.rs
inverse_fdp/: Cargo.toml  FuzzedDataProvider.example.patch  build.rs
inverse_fdp/src/: main.rs
label_topics/: Cargo.toml  config.yml
label_topics/src/: main.rs
labels/: Cargo.toml
labels/src/: main.rs
llm_eval/: Cargo.toml
llm_eval/src/: main.rs
lock_archive/: Cargo.toml
lock_archive/src/: main.rs
rerun_ci/: Cargo.toml
rerun_ci/src/: main.rs
scripts/: bips_mediawiki.py  close.py  close_ref.py  conflicts.py  coverage.py  coverage_fuzz.py  depends_cache.py  fuzz_gen.py  gitian-build.py  gitian.py  gitian_builder_copy_from_target.patch  gitian_builder_gbuild.patch  guix.py  host_reports.py  label_rebase.py  label_topics.py  labels.py  lock_archive.py  req_review.py  rerun_ci.py  stale.py  travis_re.py
scripts/util/: util.py
ssh_env/: id_rsa_drahtbot.pub
stale/: Cargo.toml  config.yml
stale/src/: main.rs
sync_bips_repo/: bips_mediawiki.py
util/: Cargo.toml  util.py
util/src/: lib.rs
webhook_features/: Cargo.toml  README.md  config.yml
webhook_features/src/: config.rs  errors.rs  main.rs
webhook_features/src/features/: ci_status.rs  labels.rs  mod.rs  spam_detection.rs  spam_filter.rs  summary_comment.rs
