[package]
name = "conflicts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
octocrab = "0.17.0"
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["full"] }
util = { path = "../util" }
