[package]
name = "label_topics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
octocrab = "0.17"
regex = "1"
serde = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
util = { path = "../util", features=["github"]}
