[package]
name = "lock_archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
octocrab = "0.17.0"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
util = { path = "../util" }
