[package]
name = "rerun_ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={version= "4.0.17",features=["derive"]}
octocrab = "0.17.0"
serde_json = "1.0.87"
tokio = { version = "1.21.2"  , features = ["full"] }
