[package]
name = "stale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
octocrab = { git = "https://github.com/XAMPPRocky/octocrab", branch = "master" }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
util = { path = "../util" ,features=["github"]}
