[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version="0.3", optional=true }
octocrab = { git = "https://github.com/XAMPPRocky/octocrab", branch = "master", optional=true }

[features]
github = ["dep:futures","dep:octocrab"]
