[package]
name = "webhook_features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = { version = "1.0.70", features = ["backtrace"] }
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
octocrab = { features = ["stream"], git = "https://github.com/XAMPPRocky/octocrab", branch = "main" }
regex = "1"
reqwest = { version = "0.11.16", features = ["json"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
util = { path = "../util" ,features=["github"]}
